--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span class="link-name">Hire me</span>
             </a></li>
             <li><a href="#" class="">
-                <i class="fa-solid fa-language"></i>
+                <i class="fa-solid fa-globe"></i>
                 <span class="link-name">language (coming soon)</span>
             </a></li>
             <li class="mode">
@@ -317,7 +317,7 @@
                             </div>
                             <h3>Leave a Feedback</h3>
                             <div class="left">
-                                <div style=" width: 50%;display: flex;justify-content: center;align-items: start;flex-direction: column;padding:0 0 0 20px;">
+                                <div class="contentInput1">
                                     <input type="text" id="name" class="textarea" placeholder="Name...">
                                     <div class="star-rating">
                                         <input type="radio" id="star5" name="rating" value="5"><label for="star5" title="5 stars"></label>
