--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Mohamed Abd Elghany</title>
 </head>
 <body>
+    <div class="loading-container">
+        <div class="spinner"></div>
+    </div>
     <div class="options_menu">
         <ul>
             <li><a href="#home" class="">
@@ -48,6 +51,9 @@
     <div class="search_window hidden">
         <i class="fa-regular fa-circle-xmark" id="close-win"></i>
         <h2 style="color: aliceblue; position: absolute; top: 50%;left: 50%;">comming soon :)</h2>
+    </div>
+    <div class="details_window hidden">
+        <div class="win-content"></div>
     </div>
     <div class="window hidden" id="window">
         <i class="fa-regular fa-circle-xmark" id="close-win"></i>
@@ -339,5 +345,6 @@
     </div>
 <script src="/js/firebase.js" type="module"></script>
 <script src="/js/script.js" type="module"></script>
+
 </body>
 </html>
