--- a/index.html
+++ b/index.html
@@ -53,7 +53,22 @@
         <h2 style="color: aliceblue; position: absolute; top: 50%;left: 50%;">comming soon :)</h2>
     </div>
     <div class="details_window hidden">
-        <div class="win-content"></div>
+        <i class="fa-regular fa-circle-xmark" id="close-win"></i>
+        <div class="win-content">
+            <div class="right">
+                <h2 class="head">project details</h2>
+                <label for="">project title</label>
+                <h2 class="title"></h2>
+                <label for="">discreption</label>
+                <p class="disc"></p>
+                <label for="">project date</label>
+                <p class="date"></p>
+                <a class="repo_link" target="_blank" href=""><i class="fa-solid fa-link"></i> repo link</a>
+            </div>
+            <div class="left" style="width: 50%;justify-content: start;" >
+                <iframe src="https://www.youtube.com/embed/JomWMVRWNzs?si=TBzU8OsnBqmbt3Os" frameborder="0" width="600" height="315"></iframe>
+            </div>
+        </div>
     </div>
     <div class="window hidden" id="window">
         <i class="fa-regular fa-circle-xmark" id="close-win"></i>
